fix for figure and caption alignment. Must override display:block from precalculus to achieve true inline

--- a/css/ccap-history.css
+++ b/css/ccap-history.css
@@ -3251,13 +3251,16 @@ div.book div.chapter div.titlepage > div > div > h2 {
   border: none;
 }
 .figure > .title {
+  display: inline;
   font-size: 9pt;
   font-weight: bold;
   color: #a63c1d;
+  text-align: left;
 }
 .figure > .caption {
   font-size: 9pt;
   color: black;
+  text-align: left;
 }
 /* The timeline figure will appear in first module after
    introduction and must snap to the bottom of page. 
