--- a/css/refactor/history-skeleton.less
+++ b/css/refactor/history-skeleton.less
@@ -122,13 +122,16 @@ div.book div.chapter div.titlepage > div > div > h2 {
 // Style figures and captions
 .figure {
   > .title {
+    display: inline;
     font-size: 9pt;
     font-weight: bold;
     color: @red;
+    text-align: left;
   }
   > .caption {
     font-size: 9pt;
     color: black;
+    text-align: left;
   }
 }
 
